# kdesdk-strigi-analyzers

./: CMakeLists.txt  Makefile.am
c++/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_cpp.cpp  kfile_cpp.desktop  kfile_cpp.h  kfile_h.desktop
diff/: CMakeLists.txt  Makefile.am  Messages.sh  difflineanalyzer.cpp  difflineanalyzer.h  kfile_diff.cpp  kfile_diff.desktop  kfile_diff.h
po/: CMakeLists.txt  poendanalyzer.cpp  polineanalyzer.cpp
ts/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_ts.cpp  kfile_ts.desktop  kfile_ts.h  tsthroughanalyzer.cpp
